chore: rename sidememo -> sidenoteAI (ids, secrets, styles, docs)

--- a/media/css/style.css
+++ b/media/css/style.css
@@ -1,4 +1,4 @@
-/* SideMemo Styles */
+/* SideNoteAI Styles */
 body {
     font-family: var(--vscode-font-family);
     font-size: var(--vscode-font-size);
